# zk-lab

./: .gitignore  404.html  CLAUDE.md  README.md  cabal.project  flake.nix  index.html  justfile  mkdocs.yml  sitemap.xml
.github/workflows/: ci.yml  deploy-docs.yml
.specify/memory/: constitution.md
constitution/: index.html
data/: config.json  queries.json
data/rdf/: zkp.ttl
docs/: constitution.md  index.md
docs/dsl/: backends.md  citations.md  index.md  intentions.md  parity-matrix.md  properties.md  test-vectors.md
docs/dsl/primitives/: set-membership.md
docs/implementation/: aiken.md  bbs.md  chain-io.md  groth16.md  halo2.md  index.md
docs/semantic-graph/: abstractions.md  challenges.md  culture.md  index.md  zkp.ttl.md
docs/tutorial/: 01-what-is-a-proof.md  02-zero-knowledge.md  03-groth16.md  04-bbs.md  05-halo2.md  06-plutus.md  index.md
dsl/: index.html
dsl/backends/: index.html
dsl/citations/: index.html
dsl/intentions/: index.html
dsl/parity-matrix/: index.html
dsl/primitives/set-membership/: index.html
dsl/properties/: index.html
dsl/test-vectors/: index.html
implementation/: index.html
implementation/aiken/: index.html
implementation/bbs/: index.html
implementation/chain-io/: index.html
implementation/groth16/: index.html
implementation/halo2/: index.html
lean/: ZKLab.lean  lakefile.lean
lean/ZKLab/: Placeholder.lean  SetMembership.lean
nix/: apps.nix  checks.nix
offchain/: zk-lab.cabal
offchain/scripts/: check-docs-disclaimers.sh  check-property-parity.sh
offchain/src/ZK/: Canonicalize.hs
offchain/src/ZK/Backend/: Tag.hs
offchain/src/ZK/DSL/: Intention.hs  Placeholder.hs  SetMembership.hs  Verdict.hs
offchain/src/ZK/DSL/Properties/: SetMembership.hs
offchain/src/ZK/DSL/SetMembership/: Types.hs
offchain/src/ZK/Vectors/: SetMembership.hs
offchain/test/ZK/DSL/: SetMembershipSpec.hs
offchain/test/ZK/Vectors/: SetMembershipSpec.hs
onchain/verifiers/set_membership/: README.md  aiken.toml
onchain/verifiers/set_membership/lib/: set_membership.ak
search/: search_index.json
semantic-graph/: index.html
semantic-graph/abstractions/: index.html
semantic-graph/challenges/: index.html
semantic-graph/culture/: index.html
semantic-graph/zkp.ttl/: index.html
specs/001-set-membership/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-set-membership/checklists/: requirements.md
specs/001-set-membership/contracts/: intention.md  properties.md  vectors.md
tutorial/: index.html
tutorial/01-what-is-a-proof/: index.html
tutorial/02-zero-knowledge/: index.html
tutorial/03-groth16/: index.html
tutorial/04-bbs/: index.html
tutorial/05-halo2/: index.html
tutorial/06-plutus/: index.html
vectors/set-membership/: schema.json
vectors/set-membership/positive/: canonical-dedup.json  singleton.json  small-set.json
vectors/set-membership/tampering/: flipped-proof-bit.json  non-member.json  replay-across-sets.json  wrong-commitment.json
