cabal-version: 3.0
name:          zk-lab
version:       0.1.0.0
synopsis:      Intention-driven zero-knowledge DSL for Cardano
description:
  Laboratory for expressing privacy-preserving statements in a
  high-level DSL and compiling them to Plutus-verifiable proofs
  across multiple backends. See the spec under
  @specs/001-set-membership/@.

homepage:      https://lambdasistemi.github.io/zk-lab/
bug-reports:   https://github.com/lambdasistemi/zk-lab/issues
license:       Apache-2.0
author:        lambdasistemi
maintainer:    paolo.veronelli@gmail.com
category:      Cryptography
build-type:    Simple
tested-with:   GHC ==9.10.1

source-repository head
  type:     git
  location: https://github.com/lambdasistemi/zk-lab

common warnings
  ghc-options:
    -Wall -Werror -Wunused-imports -Wunused-packages
    -Wmissing-export-lists -Wname-shadowing
    -Wdeferred-out-of-scope-variables -Wpartial-type-signatures
    -Wredundant-constraints

common lang
  default-language:   Haskell2010
  default-extensions:
    DataKinds
    DerivingStrategies
    FlexibleContexts
    GADTs
    ImportQualifiedPost
    KindSignatures
    LambdaCase
    OverloadedStrings
    ScopedTypeVariables
    StandaloneDeriving
    StrictData
    TypeApplications

library
  import:          warnings, lang
  hs-source-dirs:  src
  exposed-modules:
    ZK.Backend.Tag
    ZK.DSL.Intention
    ZK.DSL.Placeholder
    ZK.DSL.SetMembership
    ZK.DSL.SetMembership.Types
    ZK.DSL.Verdict

  build-depends:
    , base        >=4.19 && <5
    , bytestring  >=0.11 && <0.13
    , containers  >=0.6  && <0.8
