cabal-version: 3.0
name:          zk-lab
version:       0.1.0.0
synopsis:      Intention-driven zero-knowledge DSL for Cardano
description:
  Laboratory for expressing privacy-preserving statements in a
  high-level DSL and compiling them to Plutus-verifiable proofs
  across multiple backends. See the spec under
  @specs/001-set-membership/@.

homepage:      https://lambdasistemi.github.io/zk-lab/
bug-reports:   https://github.com/lambdasistemi/zk-lab/issues
license:       Apache-2.0
author:        lambdasistemi
maintainer:    paolo.veronelli@gmail.com
category:      Cryptography
build-type:    Simple
tested-with:   GHC ==9.10.1

source-repository head
  type:     git
  location: https://github.com/lambdasistemi/zk-lab

common warnings
  ghc-options:
    -Wall -Werror -Wunused-imports -Wunused-packages
    -Wmissing-export-lists -Wname-shadowing
    -Wdeferred-out-of-scope-variables -Wpartial-type-signatures
    -Wredundant-constraints

common lang
  default-language:   Haskell2010
  default-extensions:
    DataKinds
    DerivingStrategies
    FlexibleContexts
    GADTs
    ImportQualifiedPost
    KindSignatures
    LambdaCase
    OverloadedStrings
    ScopedTypeVariables
    StandaloneDeriving
    StrictData
    TypeApplications

library
  import:          warnings, lang
  hs-source-dirs:  src
  exposed-modules:
    ZK.Backend.Tag
    ZK.Canonicalize
    ZK.DSL.Intention
    ZK.DSL.Placeholder
    ZK.DSL.Properties.SetMembership
    ZK.DSL.SetMembership
    ZK.DSL.SetMembership.Types
    ZK.DSL.Verdict
    ZK.Vectors.SetMembership

  build-depends:
    , aeson              >=2.1  && <2.3
    , base               >=4.19 && <5
    , base16-bytestring  >=1.0  && <1.1
    , bytestring         >=0.11 && <0.13
    , containers         >=0.6  && <0.8
    , cryptohash-sha256  >=0.11 && <0.12
    , directory          >=1.3  && <1.4
    , filepath           >=1.4  && <1.6
    , QuickCheck         >=2.14 && <2.16
    , text               >=2.0  && <2.2

test-suite unit-tests
  import:             warnings, lang
  type:               exitcode-stdio-1.0
  hs-source-dirs:     test
  main-is:            Spec.hs
  other-modules:
    ZK.DSL.SetMembershipSpec
    ZK.Vectors.SetMembershipSpec

  build-depends:
    , base
    , directory  >=1.3  && <1.4
    , hspec      >=2.11 && <2.12
    , text       >=2.0  && <2.2
    , zk-lab

  build-tool-depends: hspec-discover:hspec-discover
